# musicbot-py

./: .env.example  README.md  launcher.py  pyproject.toml
src/: bot.py  util.py
src/cogs/: General.py  Music.py
src/structures/: client.py  interaction.py  music.py
src/structures/discord/: http.py
