[tool.poetry]
name = "musicbot-py"
version = "1.0.0"
description = "(i'll add later)"
authors = ["Allvaa"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "1.6.0"
python-dotenv = "^0.15.0"
wavelink = "^0.9.6"
jishaku = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
